--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-0.05 Sun Sep 14 13:34:44 GMT 2008
+0.05 Tue Sep 16 01:30:20 GMT 2008
+    - Added a proper test using Test::Warn
+
+0.04 Sun Sep 14 13:34:44 GMT 2008
     - Pod fixes
     - Added Exporter to depends
 
