--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07 Fri Sep 26 03:33:35 GMT 2008
+    - Yep. Fixes it.
+
 0.06_01 Wed Sep 17 16:15:59 GMT 2008
     - See if depending on latest Test::Warn fixes a weird test failure
 
