--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.08 Sun Feb 21 02:58:36 GMT 2010
+    - Depend on Test::Warn 0.20 to reduce CPAN tester FAILs
+    - Convert distribution to Module::Install
+    - Silence 'used only once' warnings
+    - Added a README
+
 0.07 Fri Sep 26 03:33:35 GMT 2008
     - Yep. Fixes it.
 
